[package]
name = "convertml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brl = {path = "../brl"}
clap = {version = "4.3.0", features = ["derive"]}
log = {workspace = true}
rbmath = { version = "0.1.0", path = "../rbmath" }
simple_logger = { version = "4.1.0", default-features = false }
smallvec = {workspace = true}
